# movfx

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
api/: index.html  references.rst
api/SUMMARY/: index.html
api/core/: index.html
api/effects/: index.html
api/effects/base/: index.html
api/effects/dissolve/: index.html
api/effects/fade/: index.html
api/effects/push/: index.html
api/effects/wipe/: index.html
api/references/: index.html
changelog/: index.html
conda/: dev.yaml
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  usage.md
docs/api/: references.md
installation/: index.html
scripts/: gen_ref_nav.py
search/: search_index.json
src/movfx/: __init__.py  core.py
src/movfx/effects/: __init__.py  base.py  dissolve.py  fade.py  push.py  wipe.py
tests/: __init__.py  conftest.py  test_effects.py  test_integration.py  test_movfx.py
usage/: index.html
